--- a/my_grav/index.html
+++ b/my_grav/index.html
@@ -10,7 +10,9 @@
 	<p id="p3">3</p>
 <p id="p4">300</p>
 <p >800</p>
-    <div id="target"></div>
+<p id="pts">0</p>
+    <div id="obj"></div>
+	<div id="tar"></div>
     <link rel="stylesheet" href="style.css">
 </body>
 </html>
