--- a/my_grav/index.html
+++ b/my_grav/index.html
@@ -10,9 +10,7 @@
 	<p id="p3">3</p>
 <p id="p4">300</p>
 <p >800</p>
-<p id="pts">100</p>
-    <div id="obj"></div>
-	<div id="tar"></div>
+    <div id="target"></div>
     <link rel="stylesheet" href="style.css">
 </body>
 </html>
