--- a/my_grav_game/index.html
+++ b/my_grav_game/index.html
@@ -8,9 +8,10 @@
     <p id="p1">1</p>
 	<p id="p2">2</p>
 	<p id="p3">3</p>
-<p id="p4">300</p>
-<p >800</p>
+<p id="p4">0</p>
+<p id="pts">0</p>
     <div id="gun"></div>
+	<div id="tgt"></div>
     <link rel="stylesheet" href="style.css">
 </body>
 </html>
