--- a/my_grav_game/index.html
+++ b/my_grav_game/index.html
@@ -12,6 +12,7 @@
 <p id="pts">0</p>
     <div id="gun"></div>
 	<div id="tgt"></div>
+	<p id="dummy">ss</p>
     <link rel="stylesheet" href="style.css">
 </body>
 </html>
