--- a/my_grav_game/index.html
+++ b/my_grav_game/index.html
@@ -13,6 +13,9 @@
     <div id="gun"></div>
 	<div id="tgt"></div>
 	<p id="dummy">ss</p>
+	 <audio id="msc">
+        <source src="a.wav"> 
+    </audio>
     <link rel="stylesheet" href="style.css">
 </body>
 </html>
