--- a/gesture_rev/index.html
+++ b/gesture_rev/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container">
     <video class="input_video"></video>
-    <canvas class="output_canvas" width="1280px" height="720px"></canvas>
+    <canvas class="output_canvas" ></canvas>
   </div>
   <audio id="music"><source src="1.mp3" id="sr"></audio>
   <div id="tak"></div>
