--- a/gesture_rev/index.html
+++ b/gesture_rev/index.html
@@ -22,7 +22,7 @@
   <img src="image/1.jpeg" alt="" id="image">
   <script src="script.js"></script>
   <h1>Testing starts from here</h1>
-  <p>Mahatma Gandhi, byname of Mohandas Karamchand Gandhi, (born Oct. 2, 1869, Porbandar, India—died Jan. 30, 1948, Delhi), Preeminent leader of Indian nationalism and prophet of nonviolence in the 20th century.
+  <p id="don1">Mahatma Gandhi, byname of Mohandas Karamchand Gandhi, (born Oct. 2, 1869, Porbandar, India—died Jan. 30, 1948, Delhi), Preeminent leader of Indian nationalism and prophet of nonviolence in the 20th century.
 
 Gandhi grew up in a home steeped in religion, and he took for granted religious tolerance and the doctrine of ahimsa (noninjury to all living beings). He studied law in England from 1888 to 1891, and in 1893 he took a job with an Indian firm in South Africa. There he became an effective advocate for Indian rights.
 
@@ -32,7 +32,7 @@ He refashioned the Indian National Congress into an effective political instrume
 
 India achieved dominion status in 1947, but the partition of the subcontinent into India and Pakistan was a great disappointment to Gandhi, who had long worked for Hindu-Muslim unity. In September 1947 he ended rioting in Calcutta (Kolkata) by fasting. Known as the Mahatma (“Great-Souled”), Gandhi had won the affection and loyalty of millions. In January 1948 he was shot and killed by a young Hindu fanatic.</p>
 <button onclick="my_red()">red color change</button>
-<p>
+<p id="don2">
 Einstein’s parents were secular, middle-class Jews. His father, Hermann Einstein, was originally a featherbed salesman and later ran an electrochemical factory with moderate success. His mother, the former Pauline Koch, ran the family household. He had one sister, Maria (who went by the name Maja), born two years after Albert.
 
 Einstein would write that two “wonders” deeply affected his early years. The first was his encounter with a compass at age five. He was mystified that invisible forces could deflect the needle. This would lead to a lifelong fascination with invisible forces. The second wonder came at age 12 when he discovered a book of geometry, which he devoured, calling it his “sacred little geometry book.”
@@ -44,7 +44,7 @@ The Avogadro constant is named after the Italian scientist Amedeo Avogadro. It i
 When Einstein was working on Brownian motion to explain the erratic movement of particles in a fluid, he came up with an expression for the quantity of Avogadro’s number in terms of measurable quantities. This leads to a path to determine the mass of an atom, or the molar mass for each element on the periodic table. Albert Einstein presented a new way of calculating Avogadro’s number and the size of molecules.
 </p>
 <button onclick="my_blue()">blue color change</button>
-<p>
+<p id="don3">
 Blockchain defined: Blockchain is a shared, immutable ledger that facilitates the process of recording transactions and tracking assets in a business network. An asset can be tangible (a house, car, cash, land) or intangible (intellectual property, patents, copyrights, branding). Virtually anything of value can be tracked and traded on a blockchain network, reducing risk and cutting costs for all involved.
 
 Why blockchain is important: Business runs on information. The faster it’s received and the more accurate it is, the better. Blockchain is ideal for delivering that information because it provides immediate, shared and completely transparent information stored on an immutable ledger that can be accessed only by permissioned network members. A blockchain network can track orders, payments, accounts, production and much more. And because members share a single view of the truth, you can see all details of a transaction end to end, giving you greater confidence, as well as new efficiencies and opportunities.
