--- a/Projects/socket/ticktactoe/index.html
+++ b/Projects/socket/ticktactoe/index.html
@@ -179,8 +179,8 @@
         ws.addEventListener('message', async (event) => {
             const message = event.data;
             console.log(message);
-            const text=message;
-            const blob = event.data;
+            const text=event.data;
+            // const blob = event.data;
             // if (blob instanceof Blob) {
             //     const text = await blob.text();
                 console.log(text)
