--- a/Projects/socket/remote_phone_control/index.html
+++ b/Projects/socket/remote_phone_control/index.html
@@ -13,7 +13,7 @@
     <button onclick="run()" id="btn">click</button></br>
     <input type="text" id="local_device">
     <input type="text" id="remote_device">
-    <button onclick="runswitch()" id="btn">remote</button>
+    <button onclick="runswitch()" id="btnremote">remote</button>
     <audio id="music"><source src="1.mp3" id="sr"></audio>
     <img src="image/1.jpeg" alt="" id="image">
     <p id="x1">music play</p>
