--- a/Projects/socket/snake_ladder_remote/index.html
+++ b/Projects/socket/snake_ladder_remote/index.html
@@ -46,6 +46,6 @@
 
         <input type="text" id="p1_name">
         <input type="text" id="p2_name">
-        <button onclick="name_init_user()">connect</button>
+        <button id="btnremote" onclick="name_init_user()">connect</button>
     </body>
 </html>
